--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,28 @@
-title: Bhumit Sheth
-logo: /asset/img/headshot_circle.png
-description: test below image
-show_downloads: true
+title: <p align="center"> Bhumit Sheth </p>
+
+logo: "/images/picture.png?raw=true"
+
+description:
+  <p align="center">
+  Phoenix, USA
+  <br> (+1) 6232123389
+  <br> contact.bhumit#gmail.com
+  <br> <a href="pdf/Resume_Bhumit_Sheth_May_2024_v7.pdf">Resume</a> |
+  <a href="https://www.linkedin.com/in/bhumitsheth/">LinkedIn</a> |
+  <a href="https://github.com/shethbhumit">GitHub</a>
+  <br> <a href="https://www.kaggle.com/boomitsheth">Kaggle</a> |
+  <a href="https://public.tableau.com/app/profile/bhumit.sheth/vizzes">Tableau</a>
+  </p>
+  
+  <p align="justify">
+  I am a <b>Business Analyst</b> who enjoys connecting the dots by the use of technology, especially in supply chain domain. 
+  <br>
+  I have graduated with a <b>Master's Degree in Business Analytics at W. P. Carey School of Business, Arizona State University</b>, where I received solid training in all the major fields of Data Science and Supply Chain .
+  <br>
+  I have a hard science education, having achieved a <b>Bachelor's Degree in Petroleum Engineering from IIT (ISM) Dhanbad, India </b>.
+  <br>
+  I consider myself a kind, empathetic, creative and determined person. I am pragmatic and organized, yet flexible.
+  <br><br>
+  </p>
+  
 theme: jekyll-theme-minimal
