--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 title: <p align="center"> Bhumit Sheth </p>
 
-logo: "/images/picture.png?raw=true"
+logo: "/images/picture.jpg"
 
 description:
   <p align="center">
   Phoenix, USA
   <br> (+1) 6232123389
-  <br> contact.bhumit#gmail.com
+  <br> contact.bhumit@gmail.com
   <br> <a href="pdf/Resume_Bhumit_Sheth_May_2024_v7.pdf">Resume</a> |
   <a href="https://www.linkedin.com/in/bhumitsheth/">LinkedIn</a> |
   <a href="https://github.com/shethbhumit">GitHub</a>
