--- a/_config.yml
+++ b/_config.yml
@@ -1,47 +1,30 @@
-title: <p align="center"> Giorgio Carbone </p>
+title: <p align="center"> Bhumit Sheth </p>
 
-logo: "/images/picture.png?raw=true"
+logo: "/images/picture.jpg"
 
 description:
   <p align="center">
-  Milan, Italy
-  <br> (+39) 3406959794
-  <br> carbone.giorgio4@gmail.com
-  <br> <a href="pdf/Carbone_Giorgio_CV_eng.pdf">Resume</a> |
-  <a href="https://www.linkedin.com/in/giorgiocarbone/">LinkedIn</a> |
-  <a href="https://github.com/giocoal">GitHub</a>
-  <br> <a href="https://scholar.google.com/citations?user=XwyRP1wAAAAJ&hl=en&oi=sra">Google Scholar</a> | 
-  <a href="https://medium.com/@giorgiocarbone">Medium</a>
-  <br> <a href="https://www.kaggle.com/giorgiocarbone">Kaggle</a> |
-  <a href="https://public.tableau.com/app/profile/giorgio.carbone3907">Tableau</a>
+  Phoenix, USA
+  <br> (+1) 6232123389
+  <br> contact.bhumit@gmail.com
+  <br> <a href="pdf/Resume_Bhumit_Sheth_May_2024_v7.pdf">Resume</a> |
+  <a href="https://www.linkedin.com/in/bhumitsheth/">LinkedIn</a> |
+  <a href="https://github.com/shethbhumit">GitHub</a>
+  <br> <a href="https://www.kaggle.com/boomitsheth">Kaggle</a> |
+  <a href="https://public.tableau.com/app/profile/bhumit.sheth/vizzes">Tableau</a>
   </p>
   
   <p align="justify">
-  I am a <b>data scientist</b> who enjoys connecting the dots by the use of technology. 
+  I am a <b>Business Analyst</b> who enjoys connecting the dots by the use of technology, especially in supply chain domain. 
   <br>
-  I have graduated with a <b>Master's Degree in Data Science at University of Milano-Bicocca</b>, where I received solid training in all the major fields of Data Science.
+  I have graduated with a <b>Master's Degree in Business Analytics at W. P. Carey School of Business, Arizona State University</b>, where I received solid training in all the major fields of Data Science and Supply Chain .
   <br>
-  I have a hard science education, having achieved a <b>Bachelor's Degree in Chemical Sciences and Technologies</b>.
+  I have a hard science education, having achieved a <b>Bachelor's Degree in Petroleum Engineering from IIT (ISM) Dhanbad, India </b>.
   <br>
   I consider myself a kind, empathetic, creative and determined person. I am pragmatic and organized, yet flexible.
   <br><br>
   </p>
   
 theme: jekyll-theme-minimal
-google_analytics: UA-145578661-1 # Google Analytics tracking ID
 
-# I am particularly drawn to digital signal and image processing and analysis, as well as the latest ML topics, such as Computer Vision, NLP and Generative Models.
-#and in particular earning a bachelor's degree in Chemical Sciences and Technologies at University of Milano-Bicocca, which program included courses in mathematics, physics and chemistry (inorganic, organic, physical and analytical), 
-#Although I have an interest in the discipline of data science in its entirety,
-
-#<p align="justify">
-#I am an aspiring <b>data scientist</b> who enjoys connecting the dots by the use of technology. 
-#<br><br>
-#I am pursing <b>Master's Degree in Data Science at University of Milano-Bicocca</b>, where I’m receiving solid training in all the major fields of Data Science, like Statistics, Computer Science, Data Engineering, Machine Learning and more.
-#<br><br>
-#My hard science education (<b>Bachelor's Degree in Chemical Sciences and Technologies</b>), has allowed me to develop strong analytical, mathematical and statistical skills, which have proven useful in my current career path.
-#<br><br>
-#I consider myself a kind, empathetic, creative and determined person. I am pragmatic and organized, yet flexible.
-#<br><br>
-#</p>
 
