--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ description:
   </p>
   
   <p align="justify">
-  I am a <b>Business Analyst</b> who enjoys connecting the dots by the use of technology, especially in supply chain domain. 
+  I am a <b>Business Analyst</b> who enjoys connecting the dots by the use of technology.
   <br>
   I have graduated with a <b>Master's Degree in Business Analytics at W. P. Carey School of Business, Arizona State University</b>, where I received solid training in all the major fields of Data Science and Supply Chain .
   <br>
