--- a/_config.yml
+++ b/_config.yml
@@ -26,5 +26,14 @@ description:
   </p>
   
 theme: jekyll-theme-minimal
-google_analytics: G-P230DC6WQ3 # Google Analytics tracking ID
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P230DC6WQ3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P230DC6WQ3');
+</script>
 
